--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -4254,8 +4254,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "10d0fd47-025d-4238-9663-5e0ecd734aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from olistdash.order import Order\n",
+    "orders = Order().get_training_data(with_distance_seller_customer=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c47acf55-2b17-4af3-ada2-7fdbc72b90e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders.to_csv('../data/orders_training_data.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "54c1376a-49d9-4636-9e71-b737e796d996",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>wait_time</th>\n",
+       "      <th>expected_wait_time</th>\n",
+       "      <th>delay_vs_expected</th>\n",
+       "      <th>order_status</th>\n",
+       "      <th>dim_is_five_star</th>\n",
+       "      <th>dim_is_one_star</th>\n",
+       "      <th>review_score</th>\n",
+       "      <th>number_of_products</th>\n",
+       "      <th>number_of_sellers</th>\n",
+       "      <th>price</th>\n",
+       "      <th>freight_value</th>\n",
+       "      <th>distance_seller_customer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>e481f51cbdc54678b7cc49136f2d6af7</td>\n",
+       "      <td>8.436574</td>\n",
+       "      <td>15.544063</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>18.063837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53cdb2fc8bc7dce0b6741e2150273451</td>\n",
+       "      <td>13.782037</td>\n",
+       "      <td>19.137766</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>118.70</td>\n",
+       "      <td>22.76</td>\n",
+       "      <td>856.292580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47770eb9100c2d0c44946d9cf07ec65d</td>\n",
+       "      <td>9.394213</td>\n",
+       "      <td>26.639711</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>159.90</td>\n",
+       "      <td>19.22</td>\n",
+       "      <td>514.130333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>949d5b44dbf5de918fe9c16f97b45f8a</td>\n",
+       "      <td>13.208750</td>\n",
+       "      <td>26.188819</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.00</td>\n",
+       "      <td>27.20</td>\n",
+       "      <td>1822.800366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ad21c59c0840e6cb83a9ceb5573f8159</td>\n",
+       "      <td>2.873877</td>\n",
+       "      <td>12.112049</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.90</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>30.174037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96520</th>\n",
+       "      <td>9c5dedf39a927c1b2549525ed64a053c</td>\n",
+       "      <td>8.218009</td>\n",
+       "      <td>18.587442</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>13.08</td>\n",
+       "      <td>69.481037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96521</th>\n",
+       "      <td>63943bddc261676b46f01ca7ac2f7bd8</td>\n",
+       "      <td>22.193727</td>\n",
+       "      <td>23.459051</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>174.90</td>\n",
+       "      <td>20.10</td>\n",
+       "      <td>474.098245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96522</th>\n",
+       "      <td>83c1379a015df1e13d02aae0204711ab</td>\n",
+       "      <td>24.859421</td>\n",
+       "      <td>30.384225</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>205.99</td>\n",
+       "      <td>65.02</td>\n",
+       "      <td>968.051192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96523</th>\n",
+       "      <td>11c177c8e97725db2631073c19f07b62</td>\n",
+       "      <td>17.086424</td>\n",
+       "      <td>37.105243</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>359.98</td>\n",
+       "      <td>81.18</td>\n",
+       "      <td>370.146853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96524</th>\n",
+       "      <td>66dea50a8b16d9b4dee7af250b4be1a5</td>\n",
+       "      <td>7.674306</td>\n",
+       "      <td>25.126736</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68.50</td>\n",
+       "      <td>18.36</td>\n",
+       "      <td>631.817784</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>96525 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               order_id  wait_time  expected_wait_time  \\\n",
+       "0      e481f51cbdc54678b7cc49136f2d6af7   8.436574           15.544063   \n",
+       "1      53cdb2fc8bc7dce0b6741e2150273451  13.782037           19.137766   \n",
+       "2      47770eb9100c2d0c44946d9cf07ec65d   9.394213           26.639711   \n",
+       "3      949d5b44dbf5de918fe9c16f97b45f8a  13.208750           26.188819   \n",
+       "4      ad21c59c0840e6cb83a9ceb5573f8159   2.873877           12.112049   \n",
+       "...                                 ...        ...                 ...   \n",
+       "96520  9c5dedf39a927c1b2549525ed64a053c   8.218009           18.587442   \n",
+       "96521  63943bddc261676b46f01ca7ac2f7bd8  22.193727           23.459051   \n",
+       "96522  83c1379a015df1e13d02aae0204711ab  24.859421           30.384225   \n",
+       "96523  11c177c8e97725db2631073c19f07b62  17.086424           37.105243   \n",
+       "96524  66dea50a8b16d9b4dee7af250b4be1a5   7.674306           25.126736   \n",
+       "\n",
+       "       delay_vs_expected order_status  dim_is_five_star  dim_is_one_star  \\\n",
+       "0                    0.0    delivered                 0                0   \n",
+       "1                    0.0    delivered                 0                0   \n",
+       "2                    0.0    delivered                 1                0   \n",
+       "3                    0.0    delivered                 1                0   \n",
+       "4                    0.0    delivered                 1                0   \n",
+       "...                  ...          ...               ...              ...   \n",
+       "96520                0.0    delivered                 1                0   \n",
+       "96521                0.0    delivered                 0                0   \n",
+       "96522                0.0    delivered                 1                0   \n",
+       "96523                0.0    delivered                 0                0   \n",
+       "96524                0.0    delivered                 1                0   \n",
+       "\n",
+       "       review_score  number_of_products  number_of_sellers   price  \\\n",
+       "0                 4                   1                  1   29.99   \n",
+       "1                 4                   1                  1  118.70   \n",
+       "2                 5                   1                  1  159.90   \n",
+       "3                 5                   1                  1   45.00   \n",
+       "4                 5                   1                  1   19.90   \n",
+       "...             ...                 ...                ...     ...   \n",
+       "96520             5                   1                  1   72.00   \n",
+       "96521             4                   1                  1  174.90   \n",
+       "96522             5                   1                  1  205.99   \n",
+       "96523             2                   2                  1  359.98   \n",
+       "96524             5                   1                  1   68.50   \n",
+       "\n",
+       "       freight_value  distance_seller_customer  \n",
+       "0               8.72                 18.063837  \n",
+       "1              22.76                856.292580  \n",
+       "2              19.22                514.130333  \n",
+       "3              27.20               1822.800366  \n",
+       "4               8.72                 30.174037  \n",
+       "...              ...                       ...  \n",
+       "96520          13.08                 69.481037  \n",
+       "96521          20.10                474.098245  \n",
+       "96522          65.02                968.051192  \n",
+       "96523          81.18                370.146853  \n",
+       "96524          18.36                631.817784  \n",
+       "\n",
+       "[96525 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('../data/orders_training_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a90a8d-143d-4bb1-b888-402a34897c90",
    "metadata": {},
    "outputs": [],
    "source": []
